# space-game

./: .gitignore  CMakeLists.txt  ogre.cfg  plugins.cfg  resources.cfg  space-game.kdev4
GameMedia/materials/programs/: gradientshader.cg
GameMedia/materials/scripts/: gradientshader.material  mars.material  moon.material  sun.material
GameMedia/materials/textures/: README
Media/materials/scripts/: myMaterial.material
Media/models/: Scene.material
enet-1.2.1/: Makefile  config.status
enet-1.2.1/.deps/: callbacks.Po  host.Po  list.Po  packet.Po  peer.Po  protocol.Po  unix.Po
enet-1.2.1/include/: Makefile
enet-1.2.1/include/enet/: Makefile
src/: ExampleFrameListener.h  ExampleFrameListener.h~  game.cpp  game.cpp~  game.h  joystick.cpp  joystick.h  konstanten.h  konstanten.h~  main.cpp  main.h  metheor.cpp  metheor.h  movableobject.cpp  movableobject.cpp~  movableobject.h  movableobject.h~  movobjchangednotifier.cpp  movobjchangednotifier.cpp~  movobjchangednotifier.h  movobjchangednotifier.h~  mylogger.h  myoverlays.cpp  myoverlays.h  notifier.cpp  notifier.h  notifyable.cpp  notifyable.h  notifyable.h~  overlays.cpp  overlays.cpp~  overlays.h  overlays.h~  player.cpp  player.cpp~  player.h  player.h~  projectile.cpp  projectile.h  spacecontroller.cpp  (+10 more)
